2012-12-30  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Use coloralias to load aliases from the
	environment.  Improve commenting in the SYNOPSIS.  Document the
	new alias name restrictions.
	(coloralias): New function to set a color alias.  Enforce
	restrictions on the acceptable alias name.

	* t/aliases-env.t: Adjust warning test for new error message.
	* t/aliases-func.t: New test of coloralias.

2012-12-29  Stephen Thirlwall  <stephen.thirlwall@strategicdata.com.au>
	    Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Add support for custom color names configured with
	the ANSI_COLORS_ALIASES environment variable as set during module
	load.
	(color): Support custom colors.
	(colorvalid): Likewise.
	* t/aliases-env.t: New test of custom colors from the environment.
	* t/basic.t: Delete ANSI_COLORS_ALIASES from the environment before
	module load to avoid any effects from the test runner's settings.
	* t/basic256.t: Likewise.
	* t/eval.t: Likewise.
	* t/stringify.t: Likewise.
	* t/taint.t: Likewise.

2012-12-28  Kurt Starsinic  <kstarsinic@gmail.com>
	    Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: Add constants (with tag :constants256) and
	attributes for 256-color emulators.
	(uncolor): Support the three-part 256-color codes.
	* t/basic256.t: New test for 256-color support.
	* tests/generate-256: New script to generate 256-color test or
	demonstration files.  The files it can generate are also included
	in the distribution for viewing before installing the module.
	* tests/color256-ansi: New test file showing the 16 ANSI colors.
	* tests/color256-bg: New test file showing RGB backgrounds.
	* tests/color256-fg: New test file showing RGB backgrounds.
	* tests/color256-grey: New test file showing grey-scale colors.

2012-12-28  Russ Allbery  <rra@stanford.edu>

	* t/basic.t: Test uncolor with \e[m and '' as only arguments.

	* ANSIColor.pm: $AUTOLOCAL takes precedence over $AUTORESET,
	reversing the previous behvior.  Document the precedence.