@@ -1,5 +1,10 @@
 2012-12-30  Russ Allbery  <rra@stanford.edu>
 
+	* ANSIColor.pm: Add COMPATIBILITY section to the documentation,
+	collecting all information about when features were introduced and
+	adding the version of Perl that they shipped with.  Add
+	appropriate version numbers to the use statements in the SYNOPSIS.
+
 	* ANSIColor.pm: Use coloralias to load aliases from the
 	environment.  Improve commenting in the SYNOPSIS.  Document the
 	new alias name restrictions.
